<resources>
    <string name="app_name">BikeTelemetry</string>
    <string name="ctx_copy">Copy</string>
    <string name="ctx_delete">Delete</string>
    <string name="btn_local_files">Local Files</string>
    <string name="btn_telemetry_files">Telemetry Files</string>
    <string name="btn_live_stream">Live Stream</string>
    <string name="txt_static_status">Status</string>
    <string name="txt_device_not_found">Device not found</string>
    <string name="txt_status_error">Error</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>